--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@
   width: 200px;
   display: flex;
   flex-direction: column;
+  /* justify-content: space-between; */
+
+}
+
+.justify{
+  flex-grow: 1;
 }
 
 .stilelogo{
@@ -77,12 +83,12 @@
   color: grey;
   border-bottom: 1px solid grey;
   padding-bottom: 15px;
-  display: flex;
-  align-items: baseline;
+
 }
 
 .profile{
   color: white;
+  padding: 15px 0;
 }
 
 .install span, .profile span{
@@ -94,7 +100,11 @@
   padding-top: 5px;
 }
 
-
+.profilo{
+  background-color: grey;
+  padding: 2px 5px;
+  border-radius: 50%;
+}
 
 .central{
   display: flex;
@@ -139,14 +149,19 @@
   padding: 5px;
 }
 
-.evidence:first-child::after{
+.sub{
+  position: relative;
+}
+
+.evidence span:first-child::after{
   content: "";
-  display: block;
+  display: inline-block;
   width: 40px;
   height: 2px;
   background-color: gold;
-  position: relative;
-  left: 545px;
+  position: absolute;
+  bottom: -5px;
+  left: 40px;
 }
 
 .recently{
@@ -217,4 +232,130 @@
   background-color: #202020;
   position: fixed;
   bottom: 0;
+  /* align-items: center; */
+}
+
+.playercontainer{
+  margin: 5px;
+  display: flex;
+  width: 100%;
+  height: 100px;
+  justify-content: space-between;
+}
+
+.playersx{
+  width: 200px;
+  display: flex;
+  align-items: center;
+
+}
+
+.fotoplayer{
+  height: 40px;
+  width: 40px;
+  background-image: url("img/sinister.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.titoloeautore{
+  padding: 0 10px;
+  flex-grow: 1;
+}
+
+.minititolo{
+  color: white;
+  font-weight: bold;
+  font-size: 0.6rem;
+}
+
+.miniautore{
+  color: grey;
+  font-size: 0.5rem;
+}
+
+.like span i{
+  color: grey;
+  padding: 0 2px;
+  margin-right: 10px;
+}
+
+.playercn{
+  width: 35%;
+  height: 100%;
+  padding-top: 10px;
+}
+
+.playbutton{
+  text-align: center;
+}
+
+.playbutton span{
+  padding: 0 10px;
+  color: white;
+  font-size: 1.2rem;
+
+}
+
+
+.tempo{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.timeline{
+  height: 4px;
+  width: 80%;
+  background: grey;
+  position: relative;
+}
+
+.playtime{
+  height: 4px;
+  background: white;
+  width: 20%;
+}
+
+.pallino{
+  width: 10px;
+  height: 10px;
+  background: white;
+  border-radius: 50%;
+  position: absolute;
+  top: -3px;
+  left: 100px;
+  visibility: hidden;
+}
+
+.tempo span{
+  color: white;
+}
+
+.playerdx{
+  width: 200px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.playerdx span{
+  color: white;
+  padding: 0 5px;
+}
+
+.volumeline{
+  width: 50%;
+  height: 4px;
+  background: grey;
+  margin-right: 10px;
+}
+
+.volume{
+  height: 4px;
+  width: 20%;
+  background: white;
 }
