--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   width: 200px;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
+
 
 }
 
@@ -39,6 +39,14 @@
   color: grey;
   padding-left: 10px;
   line-height: 35px;
+}
+
+.home ul li:hover{
+  color: white;
+}
+
+.home ul li .library:hover{
+  color: white;
 }
 
 .home ul li:first-child{
@@ -74,16 +82,18 @@
   padding-left: 10px;
 }
 
+.playlist ul li:hover{
+  color: white;
+}
+
 .installprofile{
   padding-left: 20px;
-
 }
 
 .install{
   color: grey;
   border-bottom: 1px solid grey;
   padding-bottom: 15px;
-
 }
 
 .profile{
@@ -93,6 +103,10 @@
 
 .install span, .profile span{
   padding-left: 10px;
+}
+
+.install span:hover{
+  color: white;
 }
 
 .download, .profilo{
@@ -119,6 +133,14 @@
   height: 100px;
 }
 
+.invisibile{
+  background-color: rgba(255, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+}
+
 .butupgrade{
   border: 1px solid white;
   border-radius: 50px;
@@ -130,6 +152,12 @@
   position: fixed;
   top: 30px;
   right: 20px;
+  z-index: 300;
+  transition: all 0.5s ease;
+}
+
+.butupgrade:hover{
+  transform: scale(1.1);
 }
 
 .main{
@@ -143,6 +171,10 @@
   height: 30px;
   text-align: center;
   color: grey;
+}
+
+.evidence span:hover{
+  color: white;
 }
 
 .evidence span{
@@ -181,8 +213,13 @@
   flex-basis: calc(100% / 6.5);
 }
 
+.stilefoto{
+  position: relative;
+}
+
 .stilefoto img{
   width: 100%;
+
 }
 
 .titolo, .autore{
@@ -196,6 +233,30 @@
 
 .autore{
   color: grey;
+}
+
+.layover{
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 200;
+  display: none;
+}
+
+.layover span i{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% , -50%);
+  color: white;
+  font-size: 50px;
+}
+
+.stilefoto:hover .layover{
+  display: block;
 }
 
 .suggerimenti{
@@ -281,6 +342,10 @@
   margin-right: 10px;
 }
 
+.like span i:hover{
+  color: white;
+}
+
 .playercn{
   width: 35%;
   height: 100%;
@@ -298,12 +363,15 @@
 
 }
 
-
 .tempo{
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
+}
+
+.tempo span{
+  font-size: 0.7rem;
 }
 
 .timeline{
@@ -328,6 +396,14 @@
   top: -3px;
   left: 100px;
   visibility: hidden;
+}
+
+.timeline:hover .pallino{
+  visibility: visible;
+}
+
+.timeline:hover .playtime{
+  background: gold;
 }
 
 .tempo span{
